--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -8,7 +8,6 @@
 
 @media only screen and (max-width: 550px) {
   .page-container {
-    position: absolute;
     left: 0;
     width: 100%;
   }
